--- a/views/views.xml
+++ b/views/views.xml
@@ -12,6 +12,7 @@
           <field name="prioridad"/>
           <field name="urgente"/>
           <field name="realizada"/>
+          <field name="semana"/>
         </tree>
       </field>
     </record>
